# RAG

./: .gitignore  pyproject.toml
data/vector_store/9b6f1f48-a96a-4ea3-b0ab-d4dc6ec2bc22/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
